found bug in custom scrollbar - testing solution

--- a/app/[locale]/search/components/SearchPrimary/SearchPrimary.module.css
+++ b/app/[locale]/search/components/SearchPrimary/SearchPrimary.module.css
@@ -16,6 +16,10 @@
 	border: 1px solid transparent;
 }
 
+.results-container {
+	overflow: auto;
+}
+
 .results-part {
 	width: 94dvw;
 	height: 80dvh;
