--- a/app/components/SearchResult/SearchResult.module.css
+++ b/app/components/SearchResult/SearchResult.module.css
@@ -12,7 +12,6 @@
 	margin: 4%;
 	z-index: 2;
 	overflow: hidden;
-	filter: drop-shadow(23px 0px 20px black);
 	opacity: 0;
 }
 
@@ -22,22 +21,36 @@
 	height: 23dvh;
 	overflow: hidden;
 	z-index: 0;
+	/* border-radius: 50%; */
 }
 
 .recipe-image-container > circle {
 	position: relative;
 	z-index: 1;
+	/* border-radius: 50%; */
+
+	/* filter: drop-shadow(23px 0px 20px black); */
 }
 
 .recipe-image {
 	position: absolute;
-	left: -20%;
+	left: -22%;
 	width: 23.5dvh;
 	height: 23dvh;
 	border: 20px solid #0124082d;
 	border-radius: 50%;
 	z-index: 0;
+
 	filter: brightness(0.95);
+	/* box-shadow: inset rgba(19, 180, 54, 0.254) 4px 3px 10px,
+		rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+		rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.15) 0px 16px 8px,
+		rgba(0, 0, 0, 0.147) 0px 32px 16px; */
+
+	box-shadow: rgba(23, 23, 23, 0.4) 23px 0px 10px,
+		rgba(0, 0, 0, 0.06) 2px 0px 1px, rgba(0, 0, 0, 0.09) 5px 0px 2px,
+		rgba(0, 0, 0, 0.09) 10px 0px 4px, rgba(0, 0, 0, 0.15) 22px 0px 8px,
+		rgba(0, 0, 0, 0.147) 23px 0px 16px;
 }
 
 .recipe-link {
